fixes locations margin being too big

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -375,7 +375,7 @@ html {
 
 .locations-page {
   background-color: $off-color;
-  padding: 60px 40px 80px 40px;
+  padding: 80px 40px 0 40px;
   color: #ffffff;
 
 
